option: ignore PH_SIM facility lock in 'nozomi' based modems

https://bugzilla.gnome.org/show_bug.cgi?id=696593